# MasterThesis

./: bayesian_best.sh  bayesian_optimization.py  bayesian_train.py  citation.cff  data_driven.py  dataset.py  detection.py  generate_data.py  loss.py  main.py  main_heat.py  physical1.sh  requirements.txt  scaling_check.py  surrogate_net.py  train_model.sh  update_register.py  visualisation.py
Gascoigne/: CMakeLists.txt  heat.param  heatproblem.h  loop.h  main.cpp  main_heat.cpp  main_seaice.cpp  seaice.param  seaiceproblem.h  square.inp
